--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "pyxl/core",
   "description": "Core Pyxl module for adding Pyxl Store config Tab.",
   "require": {
-    "php": "~5.5.0|~5.6.0|~7.0.0|~7.1.0",
+    "php": "~5.5.0|~5.6.0|~7.0.0|~7.1.0|~7.2.0|~7.4.0",
     "magento/magento-composer-installer": "*"
   },
   "type": "magento2-module",
